# Fintellix

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
chart/: __init__.py  display_chart.py
data/: conversations.json  settings.json
date_utils/: __init__.py  get_time.py
history/: __init__.py  persistence.py
reasoning/: __init__.py  llm.py
search/: __init__.py  search_web.py
stock/: __init__.py  competitors.py  extract_symbol.py  get_logo.py  get_stock_info.py
web/: __init__.py  config.py  sidebar.py  state.py  styles.py
web/components/: __init__.py  chart_tab.py  chat_tab.py  competitors_tab.py  stock_page.py  technical_tab.py  welcome_page.py
web/tasks/: __init__.py  analysis.py  competitors.py  polling.py
